src/test/test-models/bad/reserved/STAN_MATH_MINOR.stan
data {
  real STAN_MATH_MINOR;
}
model {
}
